# SystemSoftware

./: README.md
Labs/: CMakeLists.txt
Labs/Lab1/: areaOfCirlce.c  areaOfCirlce.h  areaOfRectangle.c  areaOfRectangle.h  main.c
Labs/Lab2/: CMakeLists.txt  makefile  myprog  newMessage.c  newMessage.h  prog  program1.c
Labs/Lab2_Part2/: CMakeLists.txt  areaOfCircle.c  areaOfCircle.h  areaOfRectangle.c  areaOfRectangle.h  areaOfSquare.c  areaOfSquare.h  areaOfTriangle.c  areaOfTriangle.h  areaProg  main.c  makefile
Labs/Lab3/: lab3  lab3.c  lab3Part2  lab3Part2.c  lab3Part3  lab3Part3.c  lab3part5  lab3part5.c  lab3part5.h  lab5Part1.c  lab5Part2.c  lab5Part3  lab5Part3.c  lab5Part4  lab5Part4.c
